k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: askme-app
  labels:
    name: askme-app
