k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: askme-service
  namespace: askme-app
  labels:
    app: askme-app
spec:
  selector:
    app: askme-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
